[package]
name = "ircbot"
version = "0.1.0"
authors = [ "Stacey Ell <stacey.ell@gmail.com>" ]


[[bin]]
name = "ircbot"


[dependencies]
libc = "0.1.8"
toml = "0.1"
time = "0.1"
url = "0.2"
rustc-serialize = "0.3"
rand = "0.3"
hyper = "0.6"
bytes = "*"
phf = "0.7"
phf_macros = "0.7"
mio = "0.5"

[dependencies.irc]
git = "https://github.com/infinityb/rust-irc"
