[package]
name = "ircbot"
license = "MIT/Apache 2.0"
repository = "http://github.com/infinityb/rust-irc-bot"
description = "IRC bot in rust"
version = "0.1.0"
authors = [ "Stacey Ell <stacey.ell@gmail.com>" ]


[[bin]]
name = "ircbot"


[dependencies]
log = "0.3"
toml = "0.1"
time = "0.1"
url = "1.2"
rustc-serialize = "0.3"
rand = "0.3"
hyper = "0.9"
bytes = "0.3"
phf = "0.7"
phf_macros = "0.7"
mio = "0.5"
html5ever = "*"
flate2 = "0.2"

[dependencies.irc]
git = "https://github.com/infinityb/rust-irc"

[dependencies.yotsuba_apiclient]
path = "/Users/sell/dev/fourchan-spider/apiclient"

[profile.release]
lto = true

[package.metadata.deb]
maintainer = "Stacey Ell <stacey.ell@gmail.com>"
copyright = "2016, Stacey Ell <stacey.ell@gmail.com>"
license_file = ["LICENSE-MIT", "4"]
extended_description = "swag"
depends = "libc6"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ircbot", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rust-irc-bot/README", "644"],
]

